<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:camerakit="http://schemas.android.com/apk/res-auto"
    tools:context=".CameraActivity">

    <com.wonderkiln.camerakit.CameraView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_above="@id/btn_take_pic"
        android:adjustViewBounds="true"
        camerakit:ckFocus="tapWithMarker" />

    <TextView
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/field_shortCalca"
        android:layout_alignParentStart="true"
        android:hint="@string/digite_boneChapeu" />

    <EditText
        android:id="@+id/field_boneChapeu"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="197dp"
        android:hint="@string/label_boneChapeu"
        android:inputType="text" />

    <TextView
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/field_camisaBlusa"
        android:layout_alignParentStart="true"
        android:hint="@string/digite_camisaBlusa" />

    <EditText
        android:id="@+id/field_camisaBlusa"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/field_boneChapeu"
        android:layout_marginStart="196dp"
        android:hint="@string/label_camisaBlusa"
        android:inputType="text" />

    <TextView
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/digite_shortCalca" />

    <EditText
        android:id="@+id/field_shortCalca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/field_camisaBlusa"
        android:layout_marginStart="201dp"
        android:hint="@string/label_shortCalca"
        android:inputType="text" />

    <TextView
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/field_calcado"
        android:layout_alignParentStart="true"
        android:hint="@string/digite_calcado" />

    <EditText
        android:id="@+id/field_calcado"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/field_shortCalca"
        android:layout_marginStart="201dp"
        android:hint="@string/label_calcado"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_take_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_take_pic"
        android:layout_alignParentBottom="true"
        android:onClick="btnSalvarFotoOnClick"/>


    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/camera"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:minDate="01/01/2018"
        android:maxDate="31/12/2018"/>

</RelativeLayout>